# KitsuneEngine

./: .gitignore  CMakeLists.txt  README.md
save_data/: README.md  score.txt  scores.txt
src/: KitsuneEngine.cpp
src/game/: Ball.cpp  Ball.h  Balls.cpp  Balls.h
src/game/assets/: README.md
src/game/assets/MyResources/: Ball.cpp  Ball.h
src/game/assets/levels/: angryballs_level2.json  angryballs_level3.json
src/game/assets/levels/AngryBalls/: angryballs_level1.json  angryballs_level4.json
src/game/assets/levels/WhereIsMyWater/: where_is_my_water_level1.json  where_is_my_water_level2.json  where_is_my_water_level3.json  where_is_my_water_level4.json
src/game/assets/previews/: README.md
src/game/assets/previews/dinojump/: dinojump_preview.mov
src/game/save_data/: SaveData.cpp  SaveData.h
src/game/scene/: AngryBalls.cpp  DinoJump.cpp  GameLoadingScene.cpp  GameLoadingScene.h  SceneGame.cpp  SceneGame.h  SceneMain.cpp  SceneMain.h
src/game/scene/AngryBalls/: AngryBalls.cpp  AngryBalls.h  AngryBalls_Level1.cpp  AngryBalls_Level1.h  AngryBalls_Level2.cpp  AngryBalls_Level2.h  AngryBalls_Level3.cpp  AngryBalls_Level3.h  AngryBalls_Level4.cpp  AngryBalls_Level4.h  AngryBalls_LevelBase.cpp  AngryBalls_LevelBase.h
src/game/scene/DinoJump/: DinoJump.cpp  DinoJump.h
src/game/scene/SpaceInvaders/: SpaceInvaders.cpp  SpaceInvaders.h
src/game/scene/WhereIsMyWater/: WhereIsMyWater_Level1.h  WhereIsMyWater_Level2.cpp  WhereIsMyWater_Level3.cpp  WhereIsMyWater_Level3.h  WhereIsMyWater_LevelBase.h
src/game/scene/WhereIsMyWhater/: WhereIsMyWater.cpp  WhereIsMyWater.h  WhereIsMyWater_Level1.cpp  WhereIsMyWater_Level2.cpp  WhereIsMyWater_Level2.h  WhereIsMyWater_Level3.cpp  WhereIsMyWater_Level4.cpp  WhereIsMyWater_Level4.h  WhereIsMyWater_LevelBase.cpp
src/lib/: Object.h  Scene.cpp  Scene.h
src/lib/collider/: CircleCollider2D.cpp  CircleCollider2D.h  Collider2D.cpp  Collider2D.h  ColliderComponent2D.cpp  ColliderComponent2D.h  ColliderTypes2D.h  CollisionManifold2D.h  CollisionSystem2D.cpp  CollisionSystem2D.h  SquareCollider2D.cpp  SquareCollider2D.h
src/lib/component/: Component.cpp  Component.h
src/lib/debug/: Debug.cpp  Debug.h
src/lib/events/: EventManager.cpp  EventManager.h  Events.cpp  Events.h  Subscription.cpp  Subscription.h
src/lib/input/: InputComponent.cpp  InputComponent.h  InputSystem.cpp  InputSystem.h
src/lib/list/: List.cpp  List.h
src/lib/object/: Object.cpp  Object.h
src/lib/physics_system/: PhysicsComponent.cpp  PhysicsComponent.h  PhysicsSystem.cpp  PhysicsSystem.h
src/lib/render/: CircleRenderComponent.cpp  CircleRenderComponent.h  RenderComponent2D.h
src/lib/resource_manager/: ResourceManager.cpp  ResourceManager.h
src/lib/scene/: SceneBase.cpp  SceneBase.h  SceneManager.cpp  SceneManager.h
src/lib/transform/: Transform2D.h
src/lib/vector/: Vector.cpp  Vector.h  Vector2D.h  Vector3D.h
src/lua/: scene_main.lua
